CURL: Incorrect stripping of query from file URL https://bugs.webkit.org/show_bug.cgi?id=104307

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2013-05-30
Reviewed by Darin Adler.

Clear the query part of the file URL if there is any.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::ResourceHandleManager::initializeHandle):

Canonical link: https://commits.webkit.org/135296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150964 268f45cc-cd09-0410-ab3c-d52691b4dbfc